<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorview">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/color" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:fontFamily="@font/sfpro"
        android:text="@string/pagina_usu_cabecalho"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="51dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barrademenu" />

    <Button
        android:id="@+id/dadospessoais_btn"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:background="@drawable/buttoncrud"
        android:fontFamily="@font/sfpro"
        android:onClick="abrirDadosDialogo"
        android:text="@string/exibir_dados_pessoais"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agendmnts_btn"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/dadospessoais_btn2"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:background="@drawable/buttoncrud"
        android:fontFamily="@font/sfpro"
        android:onClick="abrirEdicaoDadosDialogo"
        android:text="@string/alterar_dados_de_perfil"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agendmnts_btn"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/agendmnts_btn"
        android:layout_width="303dp"
        android:layout_height="76dp"
        android:background="@drawable/buttoncrud"
        android:fontFamily="@font/sfpro"
        android:onClick="abrirAgendmntsView"
        android:text="@string/agendamentos_historico"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paginausuario_usrtexto"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/paginausuario_usrtexto"
        android:layout_width="269dp"
        android:layout_height="87dp"
        android:fontFamily="@font/sfpro"
        android:text="@string/nome_usuario_aqui"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="181dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.177"
        app:srcCompat="@drawable/imgusuario" />

</androidx.constraintlayout.widget.ConstraintLayout>