<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorview">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:gravity="center">

        <TextView
            android:id="@+id/fnread_view"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/telefone_contato"
            android:textColor="@color/white"
            app:fontFamily="@font/sfpro" />

        <EditText
            android:id="@+id/insfone_db_campo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center">

        <TextView
            android:id="@+id/emailread_view"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/email_contato"
            android:textColor="@color/white"
            app:fontFamily="@font/sfpro" />

        <EditText
            android:id="@+id/insemail_db_campo"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="104dp"
        android:gravity="center">

        <TextView
            android:id="@+id/cepread_view"
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/cep_atendimento"
            android:textColor="@color/white"
            app:fontFamily="@font/sfpro" />

        <EditText
            android:id="@+id/inscep_db_campo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="163dp"
        android:gravity="center">

        <TextView
            android:id="@+id/nomelegread_view"
            android:layout_width="251dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/nomelegalread_view"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fontFamily="@font/sfpro" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="265dp"
        android:gravity="center">

        <Button
            android:id="@+id/confirmar_alteracoespdata_btn"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/entrar"
            android:text="@string/confirmar_alteracao_texto"
            app:fontFamily="@font/sfpro" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="211dp"
        android:gravity="center">

        <EditText
            android:id="@+id/insnomeleg_db_campo"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>

</RelativeLayout>